@@ -5,5 +5,5 @@ java=java
 if test -n "$JAVA_HOME"; then
     java="$JAVA_HOME/bin/java"
 fi
-exec "$java" -XX:+UseG1GC -Xmx6G -XX:+UseTLAB -XX:+ResizeTLAB -XX:-UseBiasedLocking -XX:+AlwaysPreTouch $java_args -jar $MYSELF "$@"
+exec "$java" -XX:+UseG1GC -Xmx8G -Xms8G -XX:+UseTLAB -XX:+ResizeTLAB -XX:+AlwaysPreTouch $java_args -jar $MYSELF "$@"
 exit 1 
